--- a/src/style.css
+++ b/src/style.css
@@ -1,82 +1,172 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+:root {
+  --hijau: #035b21;
+  --birutua: #00305b;
+  --birumuda: #00f0ff;
+}
+
+hr {
+  height: 4px;
+  color: white;
+  background-color: white;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 20px;
+  font-family: "Poppins", sans-serif;
+  color: white;
+  background-image: url("img/bgNo1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin: 0;
+  padding: 20px;
 }
 
 button {
-    background-color: #04AA6D;
-    border: none;
-    color: white;
-    border-radius: 20px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+  background-color: #00f0ff;
+  border: none;
+  color: black;
+  border-radius: 20px;
+  padding: 15px 32px;
+  font-weight: 800;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: #007534;
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.24), 0 17px 50px rgba(0, 0, 0, 0.19);
+  color: white;
+}
+
+.btn-number {
+  display: flex;
+  margin: 0 auto;
+  font-size: 15px;
+  margin-bottom: 20px;
 }
 
 .container {
-    width: 100%;
-    max-width: 100%;
-    margin: auto;
-    background: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    /* overflow-x: auto; Ensure the container is scrollable if the table overflows */
+  max-width: 1300px;
+  border-radius: 20px;
+  margin: auto;
+  background: #00305b;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2 {
-    text-align: center;
+h1,
+h2 {
+  text-align: center;
 }
 
 .input-section {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.input-section section {
+  /* background: salmon; */
+  display: flex;
+  flex-direction: column;
+  /* background-color: #00305b; */
+  text-align: start;
 }
 
 .input-section label {
-    margin-right: 10px;
+  font-size: 20px;
+  margin-left: 5px;
 }
 
 .input-section input {
-    margin-right: 20px;
-    padding: 5px;
+  width: 100px;
+  margin-right: 20px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .table-section {
-    display: flex;
-    justify-content: center;
-    /* overflow-x: auto; Ensure the table section is scrollable if the table overflows */
+  /* width: 80%; */
+  /* display: flex; */
+  justify-content: center;
+  position: relative;
+  overflow: auto;
+  max-height: 400px; /* Limit the height of the table section */
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  /* overflow: hidden; */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: black;
 }
 
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
+thead {
+  background-color: var(--hijau);
+  color: white;
+  position: sticky;
+  top: 0; /* Sticks the header to the top */
+  z-index: 1; /* Ensure the header is above the table body */
 }
 
-th {
-    background-color: #f2f2f2;
+th,
+td {
+  padding: 6px;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
 }
 
-thead{
-    position: sticky;
-    top: 0;
-    z-index: 10;
+tbody {
+  font-weight: 900;
+  font-size: 9px;
 }
 
-thead th {
-    background-color: yellow;
+tbody tr:nth-child(even) {
+  background-color: wheat;
+}
+
+tbody tr {
+  background-color: white;
+}
+
+tbody tr:hover {
+  background-color: #e7e7e7;
+  color: black;
+}
+
+label {
+  font-size: 20px;
+}
+
+/* Styling scrollbar untuk WebKit */
+::-webkit-scrollbar {
+  width: 1px; /* Lebar scrollbar */
+  height: 12px; /* Tinggi scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Warna background track scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Warna thumb scrollbar */
+  border-radius: 10px; /* Membuat sudut thumb melengkung */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Warna thumb scrollbar saat hover */
+}
+
+.table-scroll {
+  max-height: 400px; /* Adjust as needed */
+  overflow-y: auto;
 }
